Final touches to the site

--- a/impressum.html
+++ b/impressum.html
@@ -9,10 +9,8 @@
     <meta name="referrer" content="no-referrer">
 
     <link rel="canonical" href="http://kegeln-wermelskirchen.de">
-    <style>
-      body { font: 100%/1.5 Arial, Helvetica, sans-serif; }
-      h1 { font-size: 2em; }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
   <div class="content">
