--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <meta name="referrer" content="no-referrer">
 
     <link rel="canonical" href="http://kegeln-wermelskirchen.de">
-    <style>
-      body { font: 100%/1.5 Arial, Helvetica, sans-serif; }
-      h1 { font-size: 2em; }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="content">
@@ -23,6 +20,69 @@
 
     <section id="aktuell">
       <h2>Aktuell</h2>
+      <article>
+        <h3>Keglerball auf dem Stumpfer Knappen</h3>
+        <p><em>Juni 2017</em></p>
+        Es ist wieder so weit: Der Keglerball findet statt. Am <strong>Samstag, dem 10. Juni 2017</strong> treffen sich alle Wermelskirchener
+        Keglerinnen und Kegler <strong>auf dem Stumpfer Knappen</strong> - leider zum letzten Mal in Stumpf. <strong>Wir freuen uns auf ein dolles Fest!</strong>
+      </article>
+      <article>
+        <h3>50. Kegel-Stadtmeisterschaften in Wermelskirchen</h3>
+        <p><em>M&auml;rz 2017</em></p>
+        <p>
+          Anfang diesen Monats konnten die 50. Kegel-Stadtmeisterschaften in Wermelskirchen beendet
+          werden. 16 Clubs mit insgesamt 100 Gesellschaftskeglern sind im Oktober 2016 angetreten, die Titel
+          in den Damen- und Herrenwettbewerben zu gewinnen. Einer der Gr&uuml;ndungsmitglieder - Wigand
+          Berghaus (Rostige Neun) - kegelt zwar selbst nicht mehr mit, verfolgt jedoch den Wettbewerb immer
+          noch mit gro&szlig;em Interesse und unterh&auml;lt heute noch den Kontakt zur aktuellen Kegelgemeinschaft in
+          Wermelskirchen. Die Meisterschaften konnten im Februar beendet und die Sieger ermittelt werden.
+        </p>
+        <p>
+          Der Modus beinhaltet je Durchgang 18 Wurf in die Vollen und 12 aufgestellte, z.T. anspruchsvolle
+          Bilder, die in je 2 Wurf abger&amp;auml;umt werden m&amp;uuml;ssen.
+          Stadtmeister bei den Herren ist in dieser Saison Bernd Schmulder (En de Aap) mit 670 geworfenen
+          Holz - in insgesamt 3 Durchg&auml;ngen. Ihm folgen auf Rang 2 und 3 Willi Birkmann (657 Holz) und Savo
+          Obradovic (655 Holz) &ndash; beide ebenfalls von En de Aap. Auf den weiteren R&auml;ngen 4 bis 6 platzieren
+          sich Vorjahressieger Andr&eacute; Birkmann (644 Holz), Marcus Coen (641 Holz) und G&uuml;nter Schieweck mit
+          617 Holz (alle En de Aap). Rang 7 belegt Klaus Thiel von der Rostigen Neun mit 604 Holz sowie von
+          Rang 8 bis 10 Reinhard Mrozek (En de Aap/602 Holz), Helmut Sch&uuml;tte (Bl&auml;hboys/601 Holz) und Kai
+          Lawitzke (En de Aap/596 Holz).
+        </p>
+        <p>
+          Im Herren-Mannschaftswettbewerb musste sich das Team von &bdquo;En de Aap 1&ldquo; knapp der 2.
+          Mannschaft geschlagen geben. &bdquo;En de Aap 2&ldquo; gewinnt mit 3.149 Holz vor der ersten Mannschaft, die
+          3.145 Holz erzielen konnten. Auf Rang 3 platziert sich Rekordmeister &bdquo;Rostige Neun&ldquo; mit 2.921
+          geworfenen Holz. Auf den weiteren Pl&auml;tzen erreichen die &bdquo;Palaverk&ouml;ppe&ldquo; 2.915 Holz, die &bdquo;Dollen
+          Hechte&ldquo; 2.900 Holz, die &bdquo;Linken Bazillen&ldquo; 2.855 Holz, &bdquo;Ich han Hund&ldquo; 2.710 Holz, die &bdquo;Bl&auml;hboys&ldquo;
+          2.682 Holz und die &bdquo;Geprellten&ldquo; 2.609 Holz.
+        </p>
+        <p>
+          Im Wettbewerb der gemischten Clubs hat es wieder Zuwachs gegeben. Statt der 2 Clubs im 49.
+          Wettbewerb sind dieses Mal 5 Clubs angetreten. Vorjahressieger - die &bdquo;Muxk&ouml;ppe&ldquo; - konnten ihren
+          Titel mit insgesamt 2.726 Holz verteidigen. Die &bdquo;Dollen Zehn&ldquo; wurden Zweite mit 2.639 Holz und auf
+          Rang 3 folgen ihnen die &bdquo;Dellm&auml;nner&ldquo; mit 2.596 Holz. Rang 4 geht an das Team von &bdquo;Top Ten&ldquo; mit
+          2.471 Holz und 5. wurde die &bdquo;Pudelfamilie&ldquo; mit 2.346 Holz.
+        </p>
+        <p>
+          Im Damen-Einzelwettbewerb ist es Nicole Mrozek (Runde Sache) mit 557 Holz gelungen, den Titel im
+          Jubil&auml;umsjahr zu gewinnen. Platz 2 geht an die Vorjahressiegerin Angelika Lorenz (Muxk&ouml;ppe) mit
+          551 Holz und Rang 3 an Gabi Fischer (Top Ten) mit 533 Holz. Es folgen auf Rang 4 bis 9 Maria
+          Schmulder (Runde Sache/525 Holz), Rosel Engels (Runde Sache/522 Holz), Andrea Lenz
+          (Dellm&auml;nner/505 Holz), Marita Wei&szlig; (Brillenschlangen/501 Holz), Erika Hecht (Dellm&auml;nner/493 Holz)
+          sowie Angelika Schmidt (Dolle Zehn) und Beate Schwarz (Brillenschlangen) &ndash; beide mit 489 Holz.
+        </p>
+        <p>
+          Im Teamwettbewerb sind auch in diesem Jahr nur 2 Damenclubs angetreten. Ihren 14. Titel
+          gewinnen die &bdquo;Runde Sache&ldquo; mit 2.579 Holz und den 2. Platz belegen die &bdquo;Brillenschlangen&ldquo; mit
+          2.419 Holz. Die Veranstalter hoffen, &auml;hnlich wie bei den gemischten Clubs, dass sich zum 51.
+          Wettbewerb, der im Oktober 2017 beginnt, noch weitere Damenclubs beteiligen.
+          Gro&szlig;e Pausen haben die Kegler vorerst nicht, denn an den Wochenenden 11./12. (Hotel zur Eich)
+          und 18./19. M&auml;rz (Gastst&auml;tte H&ouml;ller) ist das &bdquo;Kr&auml;ftemessen&ldquo; um den Karl-Rombach- Pokal geplant. Das
+          vorbereitende Treffen der Clubvertreter ist am Sonntag, den 05. M&auml;rz um 10:30 h in der Gastst&auml;tte
+          H&ouml;ller vorgesehen. Danach planen die Veranstalter am 10. Juni auf dem Stumpfer Knappen den
+          traditionellen, allj&auml;hrlichen Keglerball, auf dem alle Sieger und Platzierten geehrt werden sollen.
+        </p>
+      </article>
     </section>
 
     <section id="ergebnisse">
@@ -30,6 +90,8 @@
       <p>Die Ergebnisse der Meisterschaften und Pokalkegeln sind als Google-Tabellen online verf&uuml;gbar.</p>
       <h3>Stadtmeisterschaften</h3>
       <ul>
+        <li><a href="https://docs.google.com/spreadsheets/d/1kkKCJbmQvBsmIsRZhXyZtgteBiqSDdTMF3xctWd5p3U/pubhtml">Ergebnisse 50. Stadtmeisterschaft 2016/2017</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1ckngGcGcpUdRLlt2mrmvyhf7HR4WWIf6ZpJvnjby8rQ/pubhtml">Ergebnisse 49. Stadtmeisterschaft 2015/2016</a></li>
         <li><a href="https://docs.google.com/spreadsheets/d/1-sS9Urnng4li8YPhu-Fi230Wnb0Rqnw_-5_pDjdZzHg/pubhtml">Ergebnisse 48. Stadtmeisterschaft 2014/2015</a></li>
         <li><a href="https://docs.google.com/spreadsheets/d/1KtMfCzrqaRF0FNs_p5hvHhj2YHFR1U_4TcICbNuqW58/pubhtml">Ergebnisse 47. Stadtmeisterschaft 2013/2014</a></li>
         <li><a href="https://docs.google.com/spreadsheets/d/15Wn10Zd3GicbvZd422ro3hQvTHz125o0q9JzJRIYrxk/pubhtml">Ergebnisse 46. Stadtmeisterschaft 2012/2013</a></li>
@@ -46,6 +108,8 @@
       </ul>
       <h3>Karl-Rombach-Pokal</h3>
       <ul>
+        <li><a href="https://docs.google.com/spreadsheets/d/1lEhRRtoxMSTZA5KtrLAFJg-e6AGWDK4KMpv3tgk69vY/pubhtml">Ergebnisse Karl-Rombach-Pokal 2017</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1WKY0y1Wt5AsfOSwIr7Y44naD2dDw7kHOMm01n1CJWB0/pubhtml">Ergebnisse Karl-Rombach-Pokal 2016</a></li>
         <li><a href="https://docs.google.com/spreadsheets/d/1ApJQ6yjY6SYjAk3TqwifS0U3UCIDfguNkzmiKE0GCyQ/pubhtml">Ergebnisse Karl-Rombach-Pokal 2015</a></li>
         <li><a href="https://docs.google.com/spreadsheets/d/1cf1jN5Z0l_Ekcn0xj-BG6-oHbtQEMVuEPJsfnUo9s9c/pubhtml">Ergebnisse Karl-Rombach-Pokal 2014</a></li>
       </ul>
@@ -86,7 +150,7 @@
 
     <footer>
       <hr>
-      <nav>
+      <nav class="cf">
         <ul>
           <li><a href="#top">Nach oben</a></li>
           <li><a href="impressum.html">Impressum</a></li>
