Adding license graphic locally, because directive does not allow loading from other sources.

--- a/impressum.html
+++ b/impressum.html
@@ -25,7 +25,7 @@
       <h3>Veröffentlicht durch</h3>
       <p>Beate und Udo Schwarz<br>Mondweg 4<br>42929 Wermelskirchen</p>
       <p>Alle Inhalte unterliegen (sofern nicht abweichend angegeben) der Creative Commons Namensnennung-Keine Bearbeitung 2.0 Deutschland Lizenz:</p>
-      <p><a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/de/"><img style="border-width:0" src="http://i.creativecommons.org/l/by-nd/2.0/de/88x31.png" alt="Creative Commons License" /></a><br>
+      <p><a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/de/"><img style="border-width:0" src="cc-by-nd-88x31.png" alt="Creative Commons License" /></a><br>
       Dieser <span>Werk</span> ist unter einer <a rel="license" href="http://creativecommons.org/licenses/by-nd/2.0/de/">Creative Commons-Lizenz</a> lizenziert.</p>
     </section>
 
