Error correction, element brackets were set incorrect.

--- a/fehler.html
+++ b/fehler.html
@@ -22,7 +22,7 @@
       <h2>Fehler</h2>
       <article>
         <h3>Es ist ein Fehler aufgetreten</h3>
-        <p>Diese Seite konnte nicht gefunden werden. Irgendwas ist furchtbar schiefgelaufen. Das kommt vielleicht daher, dass wir die Seite gerade neu aktualisiert haben. Am besten <a href="index.html"></a>starten Sie noch einmal von der Startseite</a>.</p>
+        <p>Diese Seite konnte nicht gefunden werden. Irgendwas ist furchtbar schiefgelaufen. Das kommt vielleicht daher, dass wir die Seite gerade neu aktualisiert haben. Am besten <a href="index.html">starten Sie noch einmal von der Startseite</a>.</p>
       </article>
     </section>
 
