Adding Christmas greetings for 2017

--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@
         <section id="aktuell">
         <h2>Aktuell</h2>
         <article>
+          <h3>Frohe Weihnachten und einen Guten Rutsch!</h3>
+          <p><em>Dezember 2017</em></p>
+          <p>
+            Wir w&uuml;nschen allen Keglerinnen und Kegler aus Wermelskirchen und der Umgebung ein frohes, gesegnetes Weihnachtsfest und einen guten &Uuml;bergang ins neue Jahr!
+          </p>
+        </article>
+        <article>
           <h3>Keglerball auf dem Stumpfer Knappen</h3>
           <p><em>Juni 2017</em></p>
-          Es ist wieder so weit: Der Keglerball findet statt. Am <strong>Samstag, dem 10. Juni 2017</strong> treffen sich alle Wermelskirchener
-          Keglerinnen und Kegler <strong>auf dem Stumpfer Knappen</strong> - leider zum letzten Mal in Stumpf. <strong>Wir freuen uns auf ein dolles Fest!</strong>
+          <p>
+            Es ist wieder so weit: Der Keglerball findet statt. Am <strong>Samstag, dem 10. Juni 2017</strong> treffen sich alle Wermelskirchener
+            Keglerinnen und Kegler <strong>auf dem Stumpfer Knappen</strong> - leider zum letzten Mal in Stumpf. <strong>Wir freuen uns auf ein dolles Fest!</strong>
+          </p>
         </article>
         <article>
           <h3>50. Kegel-Stadtmeisterschaften in Wermelskirchen</h3>
